<resources>
    <string name="app_name">KKalkulator</string>
    <string name="_ac">AC</string>
    <string name="_c">C</string>
    <string name="_a">+</string>
    <string name="_s">-</string>
    <string name="_m">*</string>
    <string name="_d">÷</string>
    <string name="_p">^</string>
    <string name="_r">√</string>
    <string name="_.">.</string>
    <string name="_e">=</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
</resources>